Fix PDF on colourless, and center align icon

--- a/styles/file-icons.less
+++ b/styles/file-icons.less
@@ -10,7 +10,8 @@
 .icon-file-text,
 .icon-file-directory,
 .icon-file-media,
-.icon-book {
+.icon-book,
+.icon-file-pdf {
   &:before { text-align: center; }
 }
 
@@ -2023,6 +2024,7 @@ body.file-icons-colourless {
   .icon-file-media,
   .icon-file-binary,
   .icon-book,
+  .icon-file-pdf,
   atom-pane ul.tab-bar li.tab .title {
     &:before { color: inherit !important; }
   }
